# cloak

./: .gitignore  Cargo.toml  Dockerfile  README.md  Secrets.dev.toml  dev.Secrets.toml  main.tf
.sqlx/: query-0711cae8755479f181885217e936ec507ec5ea314912097b28caeadf459f05de.json  query-0d336897c0bce36f1eb9c0effd9231a5506c0faa27421f57bcfd9cd87e10d6fc.json  query-0d8aef797f2bdbab598ff91b87887299a1e69affa445b22a0ac36f02115def21.json  query-0f7a1b547726b48d7d8840c589fd069a2eca1951cc1cdc564055f2f704730466.json  query-0f9725c23d5ce043729e044477e37bae74fabe26a79e970d247be3b1d0e60941.json  query-1878283e6645e3494900a1917358f9638cf98453ac54fb91e8e52cacb38d0b7a.json  query-1bb08cf6a9b830093192b2bdfae8195829c367e1e1901d693f138fe34cfa8df7.json  query-2013cb726a7db22f7924444db2edc0d6745459982b05ef093b1646fe9d3b9c26.json  query-2adf7b5f524364ae0fc8594fe629302a4d81248005555494e13ee59ef2827850.json  query-2d805be048aaffe0b89a9134e5e1483d37b7d2435b280b0823c2505e1151ff13.json  query-2f0dcd2421aeec9d1144e8bc6bdebc6512a6dcdef78e1678c2cba2856fbffcc3.json  query-30c0c550e2a7d9c812d734175833dce11b3eafb531cf50137ea3044b9a41dda3.json  query-315b6aecbed97fe001c760ce72290a9579b5dd09d9bdd0cacd2eadefb4f4c3b8.json  query-3ad2bd7148516acce30fa4e7ffdb0165d5b8560fc0435d0c6c79c287ecdeabe7.json  query-3bd9ff73afc223c115186f7f05270f7c8270b788537a1cd79011af237ba28711.json  query-400004ecdaa3c2dc6b1d6082b912167c5ad4a0a18747786206d02ff1b27ac2fb.json  query-4653be5f6f92b495177658f8ed499766b9a72350b8bdf9c4910c6a684ec82c71.json  query-480e0d5c19665dc030c20e8c2a500ae81854769bb20a0d3ad521d38b5b3c312b.json  query-5006e829ced2a0d7aef7d228d630abbab4eeca770d8e5b08c909c4e76b10511e.json  query-56e4e7f64dbaca712fe9238bb497b800598fe129f40746e821edf281d9cd7534.json  query-572d5d59e9ec06502d2c88a66837dbaae6afe2ffe8e7442362978b4b12a659f1.json  query-57bded66f9d98df4d830dfd6b506e70322eb5382955d1d96ea50267416b0c456.json  query-58140d0fff23f238312ca8030e45a66844d73b3706906e7a401f7ce2185d4813.json  query-613867f9ebabc45d4429fe3d19d0dde17e5b37fbdf79533db57fc472fc613d22.json  query-68322008fc57babb9c93c197f60f83cb9f2d732121d5df7e5b756a517f556ee7.json  query-6919671acfb58c6346ac1bebc4a372ef17407e79c52fe2251041353c643e42a8.json  query-6ee342df63689dc08a04993eeb73419d512364c7d774fa44e380170ea28b9a8a.json  query-6fd9205d1ffa290ac43f941f82274d41e61d541071e500ce00a8271a31866918.json  query-7022dcb97441bbed24e10f8ce78b30d8aa5ac6b7ddf0d3843dcf4e8354fed134.json  query-736e697b39ac63dd7827d9f2ea3e9ea60232a85bc69a17efd2383309a8886df3.json  query-79e6f2ab477c705437cb8cfcc38c487f7f20b56443d390ef88d79ddcb0c56c5b.json  query-82070ebc632dd5a905da69e95c877d7f08c3166b16cf9a2432b434da78c68192.json  query-85acd759c2ec1b778fcab451546d63f0b4c90d15c7545eb1e4bfc3d6bd882ff1.json  query-86d87dbdee407f93239fa8aba06542cc8142916a5472daeb462aeb5e9211d538.json  query-871a961a524f138b17ee07931c75ac32daf10fdea290d5205780f7ef38f23d2d.json  query-93a0678ff3b81a190a0f28e61dba5a0a2dc6a62438fecaae66d483046f04f048.json  query-93f2875ae91f15c2e809d1f4578eb8713dabab4433c11dcdaae3251572a1d053.json  query-9446b2d6b7923c4bba19a2323d0ebf3331a4bb618e3419f0ba1ac58a2defdb2c.json  query-94fe261b0bac90df62d496b629eeceebf29e6d5788d6d55b5365b52bf82544d7.json  query-97e88c863db4bbc4058de024a7c7c05adbd623389dd757b50be3fff600791324.json  (+32 more)
migrations/: 20240519013038_create_users_table.sql  20240519013112_create_messages_table.sql  20240519013114_create_chats_table.sql  20240520004047_users_add_linked_to_keywords.sql  20240520012221_timestamps_not_null.sql  20240520012549_users_linked_to_keywords_not_null.sql  20240520021735_users_name_nullable.sql  20240521230448_messages_foreign_keys.sql  20240523031838_messages_drop_files.sql  20240523031906_create_table_files.sql  20240525234444_messages_add_regenerate.sql  20240526001031_messages_regenerate_not_null.sql  20240605021215_chat_soft_delete.sql  20240614213525_initialize_memories_table.sql  20240621230236_message_model_id_parent_id.sql  20240622003634_message_model_id_parent_id.sql  20240622212140_branching.sql  20240626131347_track_memory_prompt_ids.sql  20240627072549_init_memory_prompts.sql  20240627072610_init_message_upvotes.sql  (+14 more)
scripts/: logall.py  (+6 more)
(+48 files in other folders)
