[package]
name = "invisibility"
version = "0.1.0"
edition = "2021"

[profile.dev]
incremental = true

[dependencies]
actix-cors = "0.7.0"
actix-service = "2.0.2"
actix-web = "4.3.1"
anyhow = "1.0.80"
async-openai = { git = "https://github.com/djmango/async-openai.git", branch = "master" }
# async-openai = { path = "../async-openai/async-openai/" }
async-stripe = { version = "0.34.1", features = ["runtime-tokio-hyper"] }
aws-sdk-s3 = "1.29.0"
bytes = "1.5.0"
chrono = { version = "0.4.34", features = ["serde"] }
convert_case = "0.6.0"
futures = "0.3.30"
futures-util = "0.3.30"
indicatif = { version = "0.17.8", features = ["tokio"] }
jsonwebtoken = "9.2.0"
once_cell = "1.19.0"
rand = "0.8.5"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
shuttle-actix-web = "0.45.0"
shuttle-persist = "0.45.0"
shuttle-runtime = "0.45.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "postgres", "macros", "time", "chrono"] }
thiserror = "1.0.57"
# tokenizers = { version = "0.15.2", features = ["http"] }
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.40"
uuid = { version = "1.8.0", features = ["serde", "v4"] }

[dev-dependencies]
sqlx-cli = "0.7.4"
