[package]
name = "invisibility"
version = "0.1.0"
edition = "2021"

[profile.dev]
incremental = true
split-debuginfo = "unpacked"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.3.1"
anyhow = "1.0.80"
# async-openai = { git = "https://github.com/djmango/async-openai.git", branch = "master" }
async-openai = { path = "../async-openai/async-openai/" }
async-stripe = { version = "0.34.1", default-features = false, features = ["runtime-tokio-hyper", "billing", "checkout"] }
bytes = "1.5.0"
chrono = { version = "0.4.34", features = ["serde"] }
futures = "0.3.30"
futures-util = "0.3.30"
hex = "0.4.3"
hmac = "0.12.1"
indicatif = { version = "0.17.8", features = ["tokio"] }
jsonwebtoken = "9.2.0"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sha2 = "0.10.8"
shuttle-actix-web = "0.45.0"
shuttle-persist = "0.45.0"
shuttle-runtime = "0.45.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "postgres", "macros", "time", "chrono", "uuid"] }
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.40"
uuid = { version = "1.8.0", features = ["serde", "v4"] }

[dev-dependencies]
sqlx-cli = "0.7.4"
